avoiding system files

--- a/DG_2.ipynb
+++ b/DG_2.ipynb
@@ -126,9 +126,7 @@
    "outputs": [],
    "source": [
     "input_dir = 'DG-families'\n",
-    "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
-    "if '.gitignore' in input_files:\n",
-    "    input_files.remove('.gitignore')\n",
+    "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f)) and '.txt' in f]\n",
     "output_dir = 'DG-graph-binary'\n",
     "\n",
     "for input_file in input_files:\n",
@@ -296,9 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context_files = [f for f in listdir(context_folder) if isfile(join(context_folder, f))]\n",
-    "if '.gitignore' in context_files:\n",
-    "    context_files.remove('.gitignore')\n",
+    "context_files = [f for f in listdir(context_folder) if isfile(join(context_folder, f)) and 'context' in f]\n",
     "input_files.sort()\n",
     "context_files.sort()\n",
     "context_join = pd.read_csv(join(context_folder, context_files[0]), header=0, index_col=0)\n",
@@ -376,11 +372,9 @@
     "col_names = context_with_header.columns\n",
     "family_ids = context_with_header.index\n",
     "\n",
-    "families = [f for f in listdir('DG-families') if isfile(join('DG-families', f))]\n",
+    "families = [f for f in listdir('DG-families') if isfile(join('DG-families', f)) and f.startswith('F')]\n",
     "families_dict = dict()  # contains the representative word for a given family\n",
     "for f in families:\n",
-    "    if not f.startswith('F'):\n",
-    "        continue\n",
     "    elements = f.replace('.txt', '').split()\n",
     "    families_dict[elements[0]] = elements[1].split('_')[0]"
    ]
@@ -504,11 +498,9 @@
    "outputs": [],
    "source": [
     "dot_dir = 'DG-subposets'\n",
-    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f))]\n",
+    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f)) and '.dot' in dot_file]\n",
     "counter = 0\n",
     "for dot_file in dot_files:\n",
-    "    if '.dot' not in dot_file:\n",
-    "        continue\n",
     "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
     "    counter += 1\n",
     "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
