--- a/D_1.ipynb
+++ b/D_1.ipynb
@@ -327,7 +327,6 @@
     "    for e in edges:\n",
     "        cat0 = category_shortening(e[0].split('_')[1])\n",
     "        cat1 = category_shortening(e[1].split('_')[1])\n",
-    "            \n",
     "        if H.get_edge_data(*e)['style'] == 'dotted': \n",
     "            ret_str += cat0 + ' -- ' + e[2]['label'].split(': ')[1] + ' -- ' + cat1 + '; '\n",
     "        elif H.get_edge_data(*e)['style'] == 'dashed':\n",
@@ -365,6 +364,8 @@
     "H = nx.DiGraph()\n",
     "counter = 0\n",
     "for input_file in input_files:\n",
+    "    counter += 1\n",
+    "    printProgressBar(counter, len(input_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)\n",
     "    if '.txt' not in input_file:\n",
     "        continue\n",
     "    group_id = input_file.split(' ')[0].split('-')[0]\n",
@@ -413,8 +414,6 @@
     "            print('null graph', input_file)\n",
     "    words += str(list(H.nodes())) + '; '\n",
     "    write_dot(H, join('D-graph', input_file.replace('.txt','.dot')))\n",
-    "    counter += 1\n",
-    "    printProgressBar(counter, len(input_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)\n",
     "f_summary.write(group_prec + '\\t' + str(len(H)) + '\\t' + str(H.size()) + '\\t' + str(family_count) + '\\t')\n",
     "f_summary.write(edge_writer(H)[:-2])\n",
     "f_summary.write('\\t' + words[:-2] + '\\n')\n",
@@ -440,11 +439,11 @@
     "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f))]\n",
     "counter = 0\n",
     "for dot_file in dot_files:\n",
+    "    counter += 1\n",
+    "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)\n",
     "    if '.dot' not in dot_file:\n",
     "        continue\n",
-    "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
-    "    counter += 1\n",
-    "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
+    "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')"
    ]
   },
   {
