--- a/D_2.ipynb
+++ b/D_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a08708cd",
    "metadata": {},
    "outputs": [],
@@ -30,16 +30,6 @@
     "complexite = 19\n",
     "orientation = 21\n",
     "fichier_origine = 43"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf41e29a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(pd.__version__)"
    ]
   },
   {
@@ -86,12 +76,10 @@
    "outputs": [],
    "source": [
     "input_dir = 'D-families'\n",
-    "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
+    "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f)) and '.txt' in f]\n",
     "output_dir = 'D-graph-binary'\n",
     "\n",
     "for input_file in input_files:\n",
-    "    if '.txt' not in input_file:\n",
-    "        continue\n",
     "    fam_id = input_file.split()[0]\n",
     "    group_id = fam_id.split('-')[0]\n",
     "    H = nx.DiGraph()\n",
@@ -136,13 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f9b13826",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 ignored\n",
+      "2933 families\n"
+     ]
+    }
+   ],
    "source": [
     "input_dir = 'D-graph-binary'\n",
-    "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
+    "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f)) and f.startswith('F')]\n",
     "input_files.sort()\n",
     "ignored = []\n",
     "for i in ignored:\n",
@@ -156,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "89b5c7a6",
    "metadata": {},
    "outputs": [],
@@ -169,10 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0c102403",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F00018-0000 F00000            \r"
+     ]
+    }
+   ],
    "source": [
     "context_folder = 'D-contexts'\n",
     "subgroup_prev = ''\n",
@@ -180,8 +185,8 @@
     "counter = -1\n",
     "input_files_count = len(input_files)\n",
     "for subgraph in input_files:\n",
-    "    if not subgraph.startswith('F'):\n",
-    "        continue\n",
+    "#     if not subgraph.startswith('F'):\n",
+    "#         continue\n",
     "    subgroup_id = subgraph.split('-')[0]\n",
     "    if subgroup_id == subgroup_prev:\n",
     "        continue\n",
@@ -224,14 +229,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "730292d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "context shape: (2933, 19)\n"
+     ]
+    }
+   ],
    "source": [
-    "context_files = [f for f in listdir(context_folder) if isfile(join(context_folder, f))]\n",
-    "if '.gitignore' in context_files:\n",
-    "    context_files.remove('.gitignore')\n",
+    "context_files = [f for f in listdir(context_folder) if isfile(join(context_folder, f)) and 'context' in f]\n",
     "input_files.sort()\n",
     "context_files.sort()\n",
     "context_join = pd.read_csv(join(context_folder, context_files[0]), header=0, index_col=0)\n",
@@ -249,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "72d56d62",
    "metadata": {},
    "outputs": [],
@@ -267,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0211ecef",
    "metadata": {},
    "outputs": [],
@@ -279,10 +290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "979e5058",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d ' + join('D-posets', 'aoc_simplified.dot') + ' -f SIMPLIFIED -z')\n",
     "os.system('dot -Tpdf ' + join('D-posets', 'aoc_simplified.dot') + ' -o ' + join('D-posets', 'aoc_simplified.pdf'))\n",
@@ -300,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0f05ea24",
    "metadata": {},
    "outputs": [],
@@ -309,21 +331,27 @@
     "col_names = context_with_header.columns\n",
     "family_ids = context_with_header.index\n",
     "\n",
-    "families = [f for f in listdir('D-families') if isfile(join('D-families', f))]\n",
+    "families = [f for f in listdir('D-families') if isfile(join('D-families', f)) and f.startswith('F')]\n",
     "families_dict = dict()  # contains the representative word for a given family\n",
     "for f in families:\n",
-    "    if not f.startswith('F'):\n",
-    "        continue\n",
     "    elements = f.replace('.txt', '').split()\n",
     "    families_dict[elements[0]] = elements[1].split('_')[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f464d6dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F00018\r"
+     ]
+    }
+   ],
    "source": [
     "full_dot = 'aoc_full.dot'\n",
     "simplified_dot = 'aoc_simplified.dot'\n",
@@ -437,11 +465,9 @@
    "outputs": [],
    "source": [
     "dot_dir = 'D-subposets'\n",
-    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f))]\n",
+    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f)) and '.dot' in dot_file]\n",
     "counter = 0\n",
     "for dot_file in dot_files:\n",
-    "    if '.dot' not in dot_file:\n",
-    "        continue\n",
     "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
     "    counter += 1\n",
     "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
