--- a/D_3.ipynb
+++ b/D_3.ipynb
@@ -37,12 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph_filenames = [f for f in listdir('D-graph') if isfile(join('D-graph', f))]\n",
-    "if '.gitignore' in graph_filenames:\n",
-    "    graph_filenames.remove('.gitignore')\n",
-    "graph_binary_filenames  = [f for f in listdir('D-graph-binary') if isfile(join('D-graph-binary', f))]\n",
-    "if '.gitignore' in graph_binary_filenames:\n",
-    "    graph_binary_filenames.remove('.gitignore')"
+    "graph_filenames = [f for f in listdir('D-graph') if isfile(join('D-graph', f)) and f.startswith('F')]\n",
+    "graph_binary_filenames  = [f for f in listdir('D-graph-binary') if isfile(join('D-graph-binary', f)) and f.startswith('F')]"
    ]
   },
   {
@@ -412,6 +408,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b7a2cda6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_lattice.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e7ba6cb",
    "metadata": {},
    "outputs": [],
    "source": []
