exclusion of certain families

--- a/DG_2.ipynb
+++ b/DG_2.ipynb
@@ -189,22 +189,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e53c2afd",
+   "id": "6809ea27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ignored_list = list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "682372f1",
+   "metadata": {},
+   "source": [
+    "A family should be ignored (not included in the calculation of formal context, and consequently will not appear in the AOC-poset) if it's something like this:\n",
+    "\n",
+    "![saint-denis](Saint-Denis.png)\n",
+    "\n",
+    "Usually, this type of family contains numerous `Np` (proper noun) lexemes which are linked to one other lexeme, using the same construction (e.g. `X-Xien`).\n",
+    "\n",
+    "It may take hours (instead of seconds) just to check the subgraph of this type of family."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2798f134",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# any family that contains one of these lexemes is excluded\n",
+    "ignored_list = ['\\'dionysien_Adj', 'salvadorien_Adj', '\\'sulpicien_Nm', '\\'mauricien_Adj', 'Obama_Npx',\n",
+    "                'Gentilly_Npx', 'Sainte-Foy_Npx', 'fontenaysien_Adj', '\\'georgien_Adj', 'léodégarien_Adj',\n",
+    "                'audonien_Adj', 'saint-andréen_Adj', 'Chicago_Npx', 'castelneuvien_Adj', '\\'moncéen_Adj'\n",
+    "                'saint-victorien_Adj', 'saint-cyrien_Adj', '\\'oratorien_Adj', '\\'jovicien_Adj', '\\'chapelain_Nm',\n",
+    "                'Pierre_Npm', 'saint-félicien_Nm', 'Taubira_Npx', '\\'laurentien_Adj', 'saint-gervaisien_Adj',\n",
+    "                '\\'désidérien_Adj', '\\'macérien_Adj', '\\'Saint-Loup_Npx', '\\'lucéen_Adj', '\\'Moustier_Npx',\n",
+    "                'LaBastide_Npx', '\\'condéen_Adj', 'Bussy_Npx', 'saint-hilairien_Adj', '\\'savignien_Adj',\n",
+    "                ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a34117f",
    "metadata": {},
    "outputs": [],
    "source": [
     "input_dir = 'DG-graph-binary'\n",
-    "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
-    "input_files.sort()\n",
-    "# ignored = []\n",
-    "ignored = ['F06513', 'F06517', 'F06569', 'F04681', 'F04999', 'F05047', 'F05148', 'F05151', 'F05959', 'F06063', 'F06314', 'F06360', 'F06404', 'F06370', 'F06423', 'F06445', 'F06452', 'F06456', 'F06458', 'F06465', 'F06476', 'F06477', 'F06478', 'F06497', 'F06072', 'F06502', 'F06533', 'F06558', 'F06129', 'F06560', 'F06600', 'F06602', 'F06603', 'F06625', 'F06629', 'F06635']\n",
-    "for i in ignored:\n",
-    "    try:\n",
-    "        input_files.remove(i)\n",
-    "    except ValueError:\n",
-    "        pass\n",
-    "print(len(ignored), 'ignored')\n",
-    "print(len(input_files), 'families')"
+    "input_files = list()\n",
+    "ignored_family_ids = list()\n",
+    "print('Ignored families:')\n",
+    "with codecs.open('DG_summary_of_families.txt', 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        if 'family_id' in line:\n",
+    "            continue\n",
+    "        family_id = line.split('\\t')[0]\n",
+    "        ignored = False\n",
+    "        for i in ignored_list:\n",
+    "            if i in line:\n",
+    "                print(line)\n",
+    "                ignored_family_ids.append(family_id)\n",
+    "                ignored = True\n",
+    "                break\n",
+    "        if not ignored:\n",
+    "            input_files.append(family_id)\n",
+    "print(len(ignored_family_ids), 'ignored')\n",
+    "print(len(input_files), 'kept')"
    ]
   },
   {
@@ -274,11 +324,6 @@
     "            GM = isomorphism.DiGraphMatcher(G1, G2, node_match=lambda v1,v2: v1['label'] == v2['label'], edge_match=edge_compare)\n",
     "            if GM.subgraph_is_isomorphic():\n",
     "                membership[counter2] = 1\n",
-    "#                 try:\n",
-    "#                     membership_of_G1 = context[supergroup_id.replace('F', 'G')]\n",
-    "#                     membership = (membership_of_G1 | membership).astype(int)\n",
-    "#                 except KeyError:\n",
-    "#                     pass\n",
     "        supergroup_prev = supergroup_id\n",
     "    subgroup_prev = subgroup_id\n",
     "    membership = pd.Series(membership, name=subgroup_id.replace('F', 'G'))\n",
@@ -295,18 +340,11 @@
    "outputs": [],
    "source": [
     "context_files = [f for f in listdir(context_folder) if isfile(join(context_folder, f)) and 'context' in f]\n",
-    "input_files.sort()\n",
     "context_files.sort()\n",
     "context_join = pd.read_csv(join(context_folder, context_files[0]), header=0, index_col=0)\n",
-    "for i in ignored:\n",
-    "    if i in context_join.index:\n",
-    "        context_join.drop(index=i, inplace=True)\n",
     "for c in range(1, len(context_files)):\n",
     "    new_ctx = pd.read_csv(join(context_folder, context_files[c]), header=0, index_col=0)\n",
-    "    for i in ignored:\n",
-    "        if i in new_ctx.index:\n",
-    "            new_ctx.drop(index=i, inplace=True)\n",
-    "    context_join = pd.concat([context_join, new_ctx], axis=1)\n",
+    "    context_join = pd.concat([context_join, new_ctx], axis=1, join='inner')\n",
     "print('context shape:', context_join.shape)"
    ]
   },
@@ -355,10 +393,74 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02856962",
+   "metadata": {},
+   "source": [
+    "# 4. Poset properties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a50686b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = nx.DiGraph()\n",
+    "with codecs.open(join('DG-posets', 'aoc_simplified.dot'), 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        if 'Attribute' in line:\n",
+    "            L.add_node(line.split()[0])\n",
+    "        elif '->' in line:\n",
+    "            elements = line.split()\n",
+    "            L.add_edge(elements[0], elements[2])\n",
+    "count_in = 0\n",
+    "sum_in = 0\n",
+    "count_out = 0\n",
+    "sum_out = 0\n",
+    "no_edge = 0\n",
+    "top = 0\n",
+    "max_parent = 0\n",
+    "max_child = 0\n",
+    "min_parent = 1000\n",
+    "min_child = 1000\n",
+    "for node in L:\n",
+    "    if L.in_degree(node) > max_child:\n",
+    "        max_child = L.in_degree(node)\n",
+    "    if L.out_degree(node) > max_parent:\n",
+    "        max_parent = L.out_degree(node)\n",
+    "    if L.in_degree(node) < min_child and L.in_degree(node) > 0:\n",
+    "        min_child = L.in_degree(node)\n",
+    "    if L.out_degree(node) < min_parent and L.out_degree(node) > 0:\n",
+    "        min_parent = L.out_degree(node)\n",
+    "    if L.in_degree(node) == 0 and L.out_degree(node) == 0:\n",
+    "        no_edge += 1\n",
+    "    if L.out_degree(node) == 0 and L.in_degree(node) > 0:\n",
+    "        top += 1\n",
+    "    if L.in_degree(node) > 0:\n",
+    "        count_in += 1\n",
+    "        sum_in += L.in_degree(node)\n",
+    "    if L.out_degree(node) > 0:\n",
+    "        count_out += 1\n",
+    "        sum_out += L.out_degree(node)\n",
+    "print('number of concepts:', len(L.nodes))\n",
+    "print('number of isolated concepts (without parent/child):', no_edge)\n",
+    "print('number of top concepts:', top)\n",
+    "print('max_parent:', max_parent)\n",
+    "print('max_child:', max_child)\n",
+    "print('min_parent:', min_parent)\n",
+    "print('min_child:', min_child)\n",
+    "print('average number of parents:', (sum_out / count_out))\n",
+    "print('average number of children:', (sum_in / count_in))\n",
+    "print('number of levels:', len(nx.dag_longest_path(L)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5ba50ff8",
    "metadata": {},
    "source": [
-    "# 4. Calculation of subposets (parents and children of each concept)"
+    "# 5. Calculation of subposets (parents and children of each concept)"
    ]
   },
   {
