--- a/D_2.ipynb
+++ b/D_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a08708cd",
    "metadata": {},
    "outputs": [],
@@ -124,36 +124,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f9b13826",
+   "execution_count": null,
+   "id": "cb1e20ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 ignored\n",
-      "2933 families\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "input_dir = 'D-graph-binary'\n",
-    "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f)) and f.startswith('F')]\n",
-    "input_files.sort()\n",
-    "ignored = []\n",
-    "for i in ignored:\n",
-    "    try:\n",
-    "        input_files.remove(i)\n",
-    "    except ValueError:\n",
-    "        pass\n",
-    "print(len(ignored), 'ignored')\n",
-    "print(len(input_files), 'families')"
+    "ignored_list = list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "646cfe16",
+   "metadata": {},
+   "source": [
+    "A family should be ignored (not included in the calculation of formal context, and consequently will not appear in the AOC-poset) if it's something like this:\n",
+    "\n",
+    "![saint-denis](Saint-Denis.png)\n",
+    "\n",
+    "Usually, this type of family contains numerous `Np` (proper noun) lexemes which are linked to one other lexeme, using the same construction (e.g. `X-Xien`).\n",
+    "\n",
+    "It may take hours (instead of seconds) just to check the subgraph of this type of family."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "20ff043d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# any family that contains one of these lexemes is excluded\n",
+    "ignored_list = ['\\'dionysien_Adj', 'salvadorien_Adj', '\\'sulpicien_Nm', '\\'mauricien_Adj', 'Obama_Npx',\n",
+    "                'Gentilly_Npx', 'Sainte-Foy_Npx', 'fontenaysien_Adj', '\\'georgien_Adj', 'léodégarien_Adj',\n",
+    "                'audonien_Adj', 'saint-andréen_Adj', 'Chicago_Npx', 'castelneuvien_Adj', '\\'moncéen_Adj'\n",
+    "                'saint-victorien_Adj', 'saint-cyrien_Adj', '\\'oratorien_Adj', '\\'jovicien_Adj', '\\'chapelain_Nm',\n",
+    "                'Pierre_Npm', 'saint-félicien_Nm', 'Taubira_Npx', '\\'laurentien_Adj', 'saint-gervaisien_Adj',\n",
+    "                '\\'désidérien_Adj', '\\'macérien_Adj', '\\'Saint-Loup_Npx', '\\'lucéen_Adj', '\\'Moustier_Npx',\n",
+    "                'LaBastide_Npx', '\\'condéen_Adj', 'Bussy_Npx', 'saint-hilairien_Adj', '\\'savignien_Adj',\n",
+    "                ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a882c927",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dir = 'D-graph-binary'\n",
+    "input_files = list()\n",
+    "ignored_family_ids = list()\n",
+    "print('Ignored families:')\n",
+    "with codecs.open('D_summary_of_families.txt', 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        if 'family_id' in line:\n",
+    "            continue\n",
+    "        family_id = line.split('\\t')[0]\n",
+    "        ignored = False\n",
+    "        for i in ignored_list:\n",
+    "            if i in line:\n",
+    "                print(line)\n",
+    "                ignored_family_ids.append(family_id)\n",
+    "                ignored = True\n",
+    "                break\n",
+    "        if not ignored:\n",
+    "            input_files.append(family_id)\n",
+    "print(len(ignored_family_ids), 'ignored')\n",
+    "print(len(input_files), 'kept')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "89b5c7a6",
    "metadata": {},
    "outputs": [],
@@ -165,19 +207,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea1e8a0a",
+   "metadata": {},
+   "source": [
+    "The cell below compare each pair of isomorphy groups, to decide whether a group is a subgraph of the other.\n",
+    "\n",
+    "This cell prints out the current pair being calculated.\n",
+    "\n",
+    "If it is stuck in a pair more than ~2 minutes, then one of this pair should be ignored, by putting one of its lexemes in the `ignored_list` variable). "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0c102403",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F00018-0000 F00000            \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "context_folder = 'D-contexts'\n",
     "subgroup_prev = ''\n",
@@ -185,8 +231,6 @@
     "counter = -1\n",
     "input_files_count = len(input_files)\n",
     "for subgraph in input_files:\n",
-    "#     if not subgraph.startswith('F'):\n",
-    "#         continue\n",
     "    subgroup_id = subgraph.split('-')[0]\n",
     "    if subgroup_id == subgroup_prev:\n",
     "        continue\n",
@@ -229,38 +273,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "730292d9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "context shape: (2933, 19)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "context_files = [f for f in listdir(context_folder) if isfile(join(context_folder, f)) and 'context' in f]\n",
-    "input_files.sort()\n",
     "context_files.sort()\n",
     "context_join = pd.read_csv(join(context_folder, context_files[0]), header=0, index_col=0)\n",
-    "for i in ignored:\n",
-    "    if i in context_join.index:\n",
-    "        context_join.drop(index=i, inplace=True)\n",
     "for c in range(1, len(context_files)):\n",
     "    new_ctx = pd.read_csv(join(context_folder, context_files[c]), header=0, index_col=0)\n",
-    "    for i in ignored:\n",
-    "        if i in new_ctx.index:\n",
-    "            new_ctx.drop(index=i, inplace=True)\n",
-    "    context_join = pd.concat([context_join, new_ctx], axis=1)\n",
+    "    context_join = pd.concat([context_join, new_ctx], axis=1, join='inner')\n",
     "print('context shape:', context_join.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "72d56d62",
    "metadata": {},
    "outputs": [],
@@ -278,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0211ecef",
    "metadata": {},
    "outputs": [],
@@ -290,21 +319,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "979e5058",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d ' + join('D-posets', 'aoc_simplified.dot') + ' -f SIMPLIFIED -z')\n",
     "os.system('dot -Tpdf ' + join('D-posets', 'aoc_simplified.dot') + ' -o ' + join('D-posets', 'aoc_simplified.pdf'))\n",
@@ -314,15 +332,79 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71391867",
+   "id": "cfe867bf",
    "metadata": {},
    "source": [
-    "# 4. Calculation of subposets (parents and children of each concept)"
+    "# 4. Poset properties"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "938e7748",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = nx.DiGraph()\n",
+    "with codecs.open(join('D-posets', 'aoc_simplified.dot'), 'r', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        if 'Attribute' in line:\n",
+    "            L.add_node(line.split()[0])\n",
+    "        elif '->' in line:\n",
+    "            elements = line.split()\n",
+    "            L.add_edge(elements[0], elements[2])\n",
+    "count_in = 0\n",
+    "sum_in = 0\n",
+    "count_out = 0\n",
+    "sum_out = 0\n",
+    "no_edge = 0\n",
+    "top = 0\n",
+    "max_parent = 0\n",
+    "max_child = 0\n",
+    "min_parent = 1000\n",
+    "min_child = 1000\n",
+    "for node in L:\n",
+    "    if L.in_degree(node) > max_child:\n",
+    "        max_child = L.in_degree(node)\n",
+    "    if L.out_degree(node) > max_parent:\n",
+    "        max_parent = L.out_degree(node)\n",
+    "    if L.in_degree(node) < min_child and L.in_degree(node) > 0:\n",
+    "        min_child = L.in_degree(node)\n",
+    "    if L.out_degree(node) < min_parent and L.out_degree(node) > 0:\n",
+    "        min_parent = L.out_degree(node)\n",
+    "    if L.in_degree(node) == 0 and L.out_degree(node) == 0:\n",
+    "        no_edge += 1\n",
+    "    if L.out_degree(node) == 0 and L.in_degree(node) > 0:\n",
+    "        top += 1\n",
+    "    if L.in_degree(node) > 0:\n",
+    "        count_in += 1\n",
+    "        sum_in += L.in_degree(node)\n",
+    "    if L.out_degree(node) > 0:\n",
+    "        count_out += 1\n",
+    "        sum_out += L.out_degree(node)\n",
+    "print('number of concepts:', len(L.nodes))\n",
+    "print('number of isolated concepts (without parent/child):', no_edge)\n",
+    "print('number of top concepts:', top)\n",
+    "print('max_parent:', max_parent)\n",
+    "print('max_child:', max_child)\n",
+    "print('min_parent:', min_parent)\n",
+    "print('min_child:', min_child)\n",
+    "print('average number of parents:', (sum_out / count_out))\n",
+    "print('average number of children:', (sum_in / count_in))\n",
+    "print('number of levels:', len(nx.dag_longest_path(L)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71391867",
+   "metadata": {},
+   "source": [
+    "# 5. Calculation of subposets (parents and children of each concept)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0f05ea24",
    "metadata": {},
    "outputs": [],
@@ -340,18 +422,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f464d6dd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F00018\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "full_dot = 'aoc_full.dot'\n",
     "simplified_dot = 'aoc_simplified.dot'\n",
@@ -472,6 +546,14 @@
     "    counter += 1\n",
     "    printProgressBar(counter, len(dot_files), prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82eba781",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
