subposet dot to pdf correction

--- a/D_2.ipynb
+++ b/D_2.ipynb
@@ -539,7 +539,7 @@
    "outputs": [],
    "source": [
     "dot_dir = 'D-subposets'\n",
-    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f)) and '.dot' in dot_file]\n",
+    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f)) and '.dot' in f]\n",
     "counter = 0\n",
     "for dot_file in dot_files:\n",
     "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
