subposet dot to pdf correction

--- a/DG_2.ipynb
+++ b/DG_2.ipynb
@@ -600,7 +600,7 @@
    "outputs": [],
    "source": [
     "dot_dir = 'DG-subposets'\n",
-    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f)) and '.dot' in f]\n",
+    "dot_files = [f for f in listdir(dot_dir) if isfile(join(dot_dir, f)) and f.endswith('.dot')]\n",
     "counter = 0\n",
     "for dot_file in dot_files:\n",
     "    os.system('dot -Tpdf \"' + join(dot_dir, dot_file) + '\" -o \"' + join(dot_dir, dot_file.replace('.dot', '.pdf')) + '\"')\n",
